--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<p class="title">StackOverflow-lite</p>
 				<p class="head1">SIGN UP</p>
 				<h1 class="head2">WELCOME TO OUR KNOWLEDGE BASE.</h1>
-				<p><button><a href="signup.html">CREATE AN ACCOUNT</a></button></p>
+				<p><a href="signup.html" class="button">CREATE AN ACCOUNT</a></p>
 				<p class="terms">By creating an account you agree to these terms.</p>
 			</div>
 		</div>
@@ -34,11 +34,12 @@
 				</div>
 
 				<div class="form-wrap">
-					<button><a href="post.html">LOGIN INTO YOUR ACCOUNT</a></button>
+					<p><a href="post.html" class="button">LOGIN</a></p>
 				</div>
 
 				<div class="form-wrap">
 					<p>Forgot your password ?</p>
+					<p class='create-account'><a href="signup.html">Create an Account</a></p>
 				</div>
 			</form>
 		</div>
