Edited create account button

--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
 				<p class="title">StackOverflow-lite</p>
 				<p class="head1">LOGIN IN</p>
 				<h1 class="head2">WELCOME TO OUR KNOWLEDGE BASE.</h1>
-				<p><button><a href="index.html">LOGIN INTO YOUR ACCOUNT</a></button></p>
+				<p><a href="index.html" class="button">LOGIN INTO YOUR ACCOUNT</a></p>
 				<p class="terms">By creating an account you agree to these terms.</p>
 			</div>
 		</div>
@@ -47,7 +47,8 @@
 
 
 				<div class="form-wrap">
-					<button>CREATE ACCOUNT</button>
+					<p><a href="index.html" class="button">CREATE ACCOUNT</a></p>
+					<p class='create-account'><a href="index.html">I have an Account</a></p>
 				</div>
 			</form>
 		</div>
