--- a/most.html
+++ b/most.html
@@ -15,7 +15,7 @@
 			</li>
 			<li class="home-tag"><a href="post.html">Questions</a></li>
 			<li class="logout-tag"><a href="most.html">Most Answered</a></li>
-			<li class="logout-tag"><a href="your.html">Your Questions</a></li>
+			<li class="logout-tag"><a href="your.html">Profile</a></li>
 			<li class="logout-tag"><a href="index.html">logout</a></li>
 		</ul>
 	</div>
