--- a/your.html
+++ b/your.html
@@ -9,12 +9,10 @@
 		function deletePost(){
 			alert("You've deleted a post.");
 		}
-
 		
 	</script>
 </head>
 <body>
-	
 	<div class="header">
 		<ul>
 			<li><a href="post.html">StackoverFlow-Lite</a></li>
@@ -24,87 +22,186 @@
 			</li>
 			<li class="home-tag"><a href="post.html">Questions</a></li>
 			<li class="logout-tag"><a href="most.html">Most Answered</a></li>
-			<li class="logout-tag"><a href="your.html">Your Questions</a></li>
+			<li class="logout-tag"><a href="your.html">Profile</a></li>
 			<li class="logout-tag"><a href="index.html">logout</a></li>
 		</ul>
 	</div>
 
 	<img class="ans-img" src="assets/images/ans3.jpg">
+
+	<div class="profile-pic">
+		<img src="assets/images/avatar.jpg"> 
+	</div>
 	
 	<div class="ans-content">
-		<h2>Your Questions</h2>
-		<div class="answers">
-			<a href="answers.html">
-				<div class="single-answer">
-					<div class="photo">
-						<img src="assets/images/avatar.jpg"> 
-						<div class="info">
-							<ul>
-								<li>Rubalema Sam</li>
-								<li>09-Aug-2018</li>
-							</ul>
-						</div>
-					</div>
-					<div>
-						<h1>Data structure</h1>
-						<p>
-							Which data structures are used for BFS and DFS of a graph?.
-						</p>
-						<p class="label">
-							<label><a href="#">805 Answers (s)</a></label>
-							<label onclick="deletePost()"><a href="#">Delete</a></label>
-						</p>
-					</div>
-				</div>
-			</a>
+		<div class="profile-information">
+			<table class="left">
+				<tr><td>Rubalema Sam</td></tr>
+				<tr><td>0700-000-000</td></tr>
+				<tr><td>rubalemasam@gmail.com</td></tr>
+			</table>
 
-			<a href="answers.html">
-				<div class="single-answer">
-					<div class="photo">
-						<img src="assets/images/avatar.jpg"> 
-						<div class="info">
-							<ul>
-								<li>Rubalema Sam</li>
-								<li>09-Aug-2018</li>
-							</ul>
-						</div>
-					</div>
-					<div>
-						<h1>Data structures</h1>
-						<p>
-							How to implement a queue using stack?.
-						</p>
-						<p class="label">
-							<label><a href="#">98 Answers (s)</a></label>
-							<label onclick="deletePost()"><a href="#">Delete</a></label>
-						</p>
-					</div>
-				</div>
-			</a>
+			<table class="right">
+				<tr><td>You asked : 20</td></tr>
+				<tr><td>You answered : 130</td></tr>
+				<tr><td>Most answered : 274</td></tr>
+			</table>
+		</div>
 
-			<a href="answers.html">
-				<div class="single-answer">
-					<div class="photo">
-						<img src="assets/images/avatar.jpg"> 
-						<div class="info">
-							<ul>
-								<li>Rubalema Sam</li>
-								<li>09-Aug-2018</li>
-							</ul>
+		<div class="profile-section">
+			<div class="left-section">
+				<h2>Your Questions</h2>
+				<div class="answers">
+					<a href="answers.html">
+						<div class="single-answer">
+							<div class="photo">
+								<img src="assets/images/avatar.jpg"> 
+								<div class="info">
+									<ul>
+										<li>Rubalema Sam</li>
+										<li>09-Aug-2018</li>
+									</ul>
+								</div>
+							</div>
+							<div>
+								<h1>Data structure</h1>
+								<p>
+									Which data structures are used for BFS and DFS of a graph?.
+								</p>
+								<p class="label">
+									<label><a href="#">805 Answers (s)</a></label>
+									<label onclick="deletePost()"><a href="#">Delete</a></label>
+								</p>
+							</div>
 						</div>
-					</div>
-					<div>
-						<h1>python programming</h1>
-						<p>
-							What is the usage of help() and dir() function in Python?.
-						</p>
-						<p class="label">
-							<label><a href="#">87 Answers (s)</a></label>
-							<label onclick="deletePost()"><a href="#">Delete</a></label>
-						</p>
-					</div>
+					</a>
+
+					<a href="answers.html">
+						<div class="single-answer">
+							<div class="photo">
+								<img src="assets/images/avatar.jpg"> 
+								<div class="info">
+									<ul>
+										<li>Rubalema Sam</li>
+										<li>09-Aug-2018</li>
+									</ul>
+								</div>
+							</div>
+							<div>
+								<h1>Data structures</h1>
+								<p>
+									How to implement a queue using stack?.
+								</p>
+								<p class="label">
+									<label><a href="#">98 Answers (s)</a></label>
+									<label onclick="deletePost()"><a href="#">Delete</a></label>
+								</p>
+							</div>
+						</div>
+					</a>
+
+					<a href="answers.html">
+						<div class="single-answer">
+							<div class="photo">
+								<img src="assets/images/avatar.jpg"> 
+								<div class="info">
+									<ul>
+										<li>Rubalema Sam</li>
+										<li>09-Aug-2018</li>
+									</ul>
+								</div>
+							</div>
+							<div>
+								<h1>python programming</h1>
+								<p>
+									What is the usage of help() and dir() function in Python?.
+								</p>
+								<p class="label">
+									<label><a href="#">87 Answers (s)</a></label>
+									<label onclick="deletePost()"><a href="#">Delete</a></label>
+								</p>
+							</div>
+						</div>
+					</a>
 				</div>
-			</a>
+			</div>
+
+			<div class="left-section">
+				<h2>Most Answered Questions</h2>
+				<div class="answers">
+					<a href="answers.html">
+						<div class="single-answer">
+							<div class="photo">
+								<img src="assets/images/avatar.jpg"> 
+								<div class="info">
+									<ul>
+										<li>Rubalema Sam</li>
+										<li>09-Aug-2018</li>
+									</ul>
+								</div>
+							</div>
+							<div>
+								<h1>Data structure</h1>
+								<p>
+									Which data structures are used for BFS and DFS of a graph?.
+								</p>
+								<p class="label">
+									<label><a href="#">805 Answers (s)</a></label>
+									<label onclick="deletePost()"><a href="#">Delete</a></label>
+								</p>
+							</div>
+						</div>
+					</a>
+
+					<a href="answers.html">
+						<div class="single-answer">
+							<div class="photo">
+								<img src="assets/images/avatar.jpg"> 
+								<div class="info">
+									<ul>
+										<li>Rubalema Sam</li>
+										<li>09-Aug-2018</li>
+									</ul>
+								</div>
+							</div>
+							<div>
+								<h1>Data structures</h1>
+								<p>
+									How to implement a queue using stack?.
+								</p>
+								<p class="label">
+									<label><a href="#">98 Answers (s)</a></label>
+									<label onclick="deletePost()"><a href="#">Delete</a></label>
+								</p>
+							</div>
+						</div>
+					</a>
+
+					<a href="answers.html">
+						<div class="single-answer">
+							<div class="photo">
+								<img src="assets/images/avatar.jpg"> 
+								<div class="info">
+									<ul>
+										<li>Rubalema Sam</li>
+										<li>09-Aug-2018</li>
+									</ul>
+								</div>
+							</div>
+							<div>
+								<h1>python programming</h1>
+								<p>
+									What is the usage of help() and dir() function in Python?.
+								</p>
+								<p class="label">
+									<label><a href="#">87 Answers (s)</a></label>
+									<label onclick="deletePost()"><a href="#">Delete</a></label>
+								</p>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
